src/objects/Training_Class__c.object
<CustomObject>
    <fields>
        <fullName>BAU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Originating Case requesting this training class.</inlineHelpText>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only &quot;Sales Operations &amp; Support&quot; Cases can be selected.</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales Operations &amp; Support</value>
            </filterItems>
            <infoMessage>Search Sales Operations &amp; Support cases.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Training Class</relationshipLabel>
        <relationshipName>Training_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chargeback_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chargeback Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback__c</fullName>
        <label>Chargeback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class_Level_1_Reaction__c</fullName>
        <inlineHelpText>Survey Score</inlineHelpText>
        <label>Class Level 1 - Reaction</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Level_2_Learning__c</fullName>
        <inlineHelpText>Assessment Score</inlineHelpText>
        <label>Class Level 2 - Learning</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Level_3_Application__c</fullName>
        <inlineHelpText>70-Day Pulse Check Score; Manager coaching</inlineHelpText>
        <label>Class Level 3 - Application</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Level_4_Business_Impact__c</fullName>
        <label>Class Level 4 - Business Impact</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of the class.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Dates Used for Training Class records for Global Training Team</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Target Completion Date for this Learning Deliverable</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If &quot;Other&quot; describe Course.</inlineHelpText>
        <label>Course Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Integrity Coaching</fullName>
                </value>
                <value>
                    <fullName>Integrity Selling</fullName>
                </value>
                <value>
                    <fullName>Integrity Service</fullName>
                </value>
                <value>
                    <fullName>Lamp</fullName>
                </value>
                <value>
                    <fullName>Managing Sales Team</fullName>
                </value>
                <value>
                    <fullName>Other Training</fullName>
                </value>
                <value>
                    <fullName>Partner Training</fullName>
                </value>
                <value>
                    <fullName>Salesforce Training Topic</fullName>
                </value>
                <value>
                    <fullName>Sales Onboarding</fullName>
                </value>
                <value>
                    <fullName>Sales Onboarding W1</fullName>
                </value>
                <value>
                    <fullName>Sales Onboarding W2</fullName>
                </value>
                <value>
                    <fullName>Sales Performance Assessments</fullName>
                </value>
                <value>
                    <fullName>Sales University 101</fullName>
                </value>
                <value>
                    <fullName>Service Onboarding</fullName>
                </value>
                <value>
                    <fullName>Service University 101</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Cost_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Direct Cost Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Costs__c</fullName>
        <inlineHelpText>Class materials, handouts, etc.</inlineHelpText>
        <label>Direct Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_Hourly_Rate__c</fullName>
        <defaultValue>40</defaultValue>
        <inlineHelpText>Facilitator hourly rate</inlineHelpText>
        <label>Facilitator Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <label>Facilitator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Fagone</fullName>
                </value>
                <value>
                    <fullName>Bryan Luciano</fullName>
                </value>
                <value>
                    <fullName>Elaine Corriveau</fullName>
                </value>
                <value>
                    <fullName>Jennifer Roney</fullName>
                </value>
                <value>
                    <fullName>Kathryn Connolly</fullName>
                </value>
                <value>
                    <fullName>Marissa Prashaw</fullName>
                </value>
                <value>
                    <fullName>Sara Greenhalgh</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Peter Wood</fullName>
                </value>
                <value>
                    <fullName>Kendra Jarratt</fullName>
                </value>
                <value>
                    <fullName>Jeremy Sawaya</fullName>
                </value>
                <value>
                    <fullName>Susan Chase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Cost_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indirect Cost Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indirect_Costs__c</fullName>
        <inlineHelpText>Training space, Facilitator time,</inlineHelpText>
        <label>Indirect Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Instructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Experienced</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Newly Hired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>Length of the training (in hours)</inlineHelpText>
        <label>Length</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Payments</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Fleet - Partner</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>OTR-Partner</fullName>
                </value>
                <value>
                    <fullName>Service-Corporate Payments</fullName>
                </value>
                <value>
                    <fullName>Service-Fleet</fullName>
                </value>
                <value>
                    <fullName>Service-OTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Campuses</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Fargo</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Ogden</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Portland</fullName>
                </value>
                <value>
                    <fullName>WEZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <description>Field to determine how Training was delivered</description>
        <inlineHelpText>Method of training</inlineHelpText>
        <label>Modality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1-on-1</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Classroom &amp; Virtual</fullName>
                </value>
                <value>
                    <fullName>On the job</fullName>
                </value>
                <value>
                    <fullName>Phone call</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objective 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objective 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objective 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Facilitator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required if Facilitator equals &quot;Other&quot;.</inlineHelpText>
        <label>Other Facilitator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Per_Seat__c</fullName>
        <formula>Total_Cost_of_Class__c /  Total_Number_of_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Cost of Class divided by Total Number of Attendees</inlineHelpText>
        <label>Price Per Seat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Qualtrics Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Results</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Class__c</fullName>
        <formula>Direct_Costs__c +  Indirect_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct + Indirect Costs</inlineHelpText>
        <label>Total Cost of Class</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Training__c</fullName>
        <description>Total Cost of the Class multiplied by Total Number of Attendees</description>
        <inlineHelpText>Total Cost of the Class multiplied by Total Number of Attendees</inlineHelpText>
        <label>Total Cost of Training</label>
        <summarizedField>Training_Event__c.Actual_Participation_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Event__c.Actual_Participation_Hours__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Event__c.Training_Class_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Facilitator_Cost__c</fullName>
        <formula>Length__c *  Facilitator_Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Class Length x Facilitator Hourly Rate</inlineHelpText>
        <label>Total Facilitator Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Trained__c</fullName>
        <inlineHelpText>Sum of Actual Participation Hours from each attendee.</inlineHelpText>
        <label>Total Hours Trained</label>
        <summarizedField>Training_Event__c.Actual_Participation_Hours__c</summarizedField>
        <summaryForeignKey>Training_Event__c.Training_Class_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Attendees__c</fullName>
        <label>Total Number of Attendees</label>
        <summaryForeignKey>Training_Event__c.Training_Class_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Skill</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Sales_Training_Classes</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Corporate Payments,Fleet,Fleet - Partner,Global,OTR,OTR-Partner</value>
        </filters>
        <label>All Sales Training Classes</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_Sales_Operations</group>
            <group>Global_Training_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Sales_Training_Classes_This_Month</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Corporate Payments,Fleet,Fleet - Partner,Global,OTR,OTR-Partner</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Sales Training Classes This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sales_Training_Classes_This_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Corporate Payments,Fleet,Fleet - Partner,Global,OTR,OTR-Partner</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Sales Training Classes This Quarter</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Training_Classes</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>includes</operation>
            <value>Customer Service,Service-Corporate Payments,Service-Fleet,Service-OTR</value>
        </filters>
        <label>All Service Training Classes</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Training_Classes_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Customer Service,Service-Corporate Payments,Service-Fleet,Service-OTR</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Service Training Classes This Month</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Training_Classes_This_Qtr</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Customer Service,Service-Corporate Payments,Service-Fleet,Service-OTR</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Service Training Classes This Qtr</label>
    </listViews>
    <listViews>
        <fullName>All_Training_Classes</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Case__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Training Classes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Training_Classes_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Training Classes This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Training_Classes_This_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Course__c</columns>
        <columns>Length__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Training Classes This Quarter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Training_Cases_Incomplete</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Facilitator__c</columns>
        <columns>Length__c</columns>
        <columns>Direct_Costs__c</columns>
        <columns>Total_Cost_of_Class__c</columns>
        <columns>Course__c</columns>
        <columns>Objective_1__c</columns>
        <columns>Objective_2__c</columns>
        <columns>Objective_3__c</columns>
        <columns>Case__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Line_of_Business__c</columns>
        <filterScope>Mine</filterScope>
        <label>*My Sales Training Cases Incomplete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Training_Classes</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Case__c</columns>
        <columns>Length__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Course__c</columns>
        <columns>Modality__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Facilitator__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>*My Sales Training Classes last week</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Require_Course_Other_Field</fullName>
        <active>true</active>
        <description>If Course equals &quot;Other&quot;, require Course Other field.</description>
        <errorConditionFormula>AND (
ISPICKVAL(Course__c, &quot;Other&quot;),
ISBLANK( Course_Other__c )
)</errorConditionFormula>
        <errorDisplayField>Course_Other__c</errorDisplayField>
        <errorMessage>If Course equals &quot;Other&quot;, Course Other field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Facilitator</fullName>
        <active>true</active>
        <description>If Facilitator equals &quot;Other&quot;, require Other Facilitator field.</description>
        <errorConditionFormula>AND (
ISPICKVAL( Facilitator__c , &quot;Other&quot;),
ISBLANK(  Other_Facilitator__c  )
)</errorConditionFormula>
        <errorDisplayField>Other_Facilitator__c</errorDisplayField>
        <errorMessage>If Facilitator equals &quot;Other&quot;, Other Facilitator field is required.</errorMessage>
    </validationRules>
</CustomObject>